# ntshell4zephyr

src/lib/core/: ntshell.c
zephyr/: CMakeLists.txt  Kconfig  module.yml
